:bug: Fix arrow not collapsing doc links

--- a/styles/kite-wrapper.less
+++ b/styles/kite-wrapper.less
@@ -63,6 +63,10 @@ atom-text-editor, html {
     .collapser {
       cursor: pointer;
 
+      * {
+        pointer-events: none;
+      }
+
       i {
         height: 16px;
         display: inline-block;
